# simple-buffers

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  copy-docs.ps1  test.cpp  test.hpp  test.sb
.github/workflows/: build-release.yml  build.yml  deploy-docs.yml
cpp/: example.md  simplebuffers.hpp  simplebuffers.old.cpp  simplebuffers.old.hpp  test.cpp
doc/: book.toml
doc/src/: SUMMARY.md  cpp.md  cpp_optimized_binary.md  introduction.md  serialization_format.md
doc/src/cpp/: optimized_binary.md
doc/src/usage/: installation.md  schema.md  usage.md
simplebuffers-codegen/: Cargo.toml
simplebuffers-codegen/src/: lib.rs
simplebuffers-compiler/: Cargo.toml  build.rs
simplebuffers-compiler/src/: internal_generators.rs  main.rs  reserved_identifiers.rs
simplebuffers-compiler/src/ast/: mod.rs  traverse.rs
simplebuffers-compiler/src/compiler/: error.rs  mod.rs  parse.rs
simplebuffers-compiler/src/generators/: mod.rs  sanitycheck.rs
simplebuffers-compiler/src/tokenizer/: mod.rs
simplebuffers-core/: Cargo.toml
simplebuffers-core/src/: dtypes.rs  lib.rs
simplebuffers-cpp/: Cargo.toml
simplebuffers-cpp/corelib/: simplebuffers.hpp
simplebuffers-cpp/src/: annotate.rs  argparse.rs  headergen.rs  lib.rs  sourcegen.rs
simplebuffers-sanitycheck/: Cargo.toml
simplebuffers-sanitycheck/src/: lib.rs
src/: errors.old.rs  indent.rs  main.rs
src/ast/: error.rs  mod.rs  traverse.rs
src/compiler/: error.rs  mod.rs  parse.rs
src/generators/: mod.rs
src/generators/cpp/: header.rs  mod.rs
src/parser/: error.rs  mod.rs
src/tokenizer/: error.rs  mod.rs  tokenizer.rs
test/: demo  demo.cpp  simplebuffers.hpp  test.cpp  test.hpp  test.ps1  test.sb
