[package]
name = "simplebuffers-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
lazy_static = "1.4.0"
regex = "1.9.5"
regex-macro = "0.2.0"
termsize = "0.1.6"
simplebuffers-core = { path = "../simplebuffers-core" }
simplebuffers-codegen = { path = "../simplebuffers-codegen" }
simplebuffers-sanitycheck = { path = "../simplebuffers-sanitycheck" }
simplebuffers-cpp = { path = "../simplebuffers-cpp" }
clap = { version = "4.5.8", features = ["derive"] }
libloading = "0.8.4"
