[package]
name = "simplebuffers-compiler"
version = "0.1.2"
edition = "2021"
rust-version = "1.74.1"

[dependencies]
colored = "2.0.4"
regex = "1.9.5"
regex-macro = "0.2.0"
simplebuffers-core = { path = "../simplebuffers-core" }
simplebuffers-codegen = { path = "../simplebuffers-codegen" }
simplebuffers-sanitycheck = { path = "../simplebuffers-sanitycheck" }
simplebuffers-cpp = { path = "../simplebuffers-cpp" }
clap = { version = "4.5.8", features = ["derive"] }
libloading = "0.8.4"
convert_case = "0.6.0"
itertools = "0.13.0"
lazy_static = "1.5.0"

[build-dependencies]
rustc_version = "0.4.0"
